feat : match 기능 병합